[gd_scene load_steps=8 format=2]

[ext_resource path="res://Script/Interfaces/Control.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Interfac grafica/espacio.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Interfac grafica/button.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Musica/Soundtracks/musica menu del juego.ogg" type="AudioStream" id=5]

[sub_resource type="GDScript" id=1]
script/source = "extends VBoxContainer

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[node name="Controles" type="Node"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Fondo" type="NinePatchRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -47.0
margin_right = 100.0
margin_bottom = 47.0
script = SubResource( 1 )

[node name="Jugar" type="TextureButton" parent="Control/VBoxContainer"]
editor/display_folded = true
margin_right = 200.0
margin_bottom = 45.0
rect_min_size = Vector2( 145, 45 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Control/VBoxContainer/Jugar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -6.5
margin_right = 11.0
margin_bottom = 7.5
custom_fonts/font = SubResource( 2 )
text = "JUGAR"

[node name="Salir" type="TextureButton" parent="Control/VBoxContainer"]
editor/display_folded = true
margin_top = 49.0
margin_right = 200.0
margin_bottom = 94.0
rect_min_size = Vector2( 145, 45 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="Control/VBoxContainer/Salir"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -6.5
margin_right = 11.0
margin_bottom = 7.5
custom_fonts/font = SubResource( 2 )
text = "SALIR
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0
autoplay = true
[connection signal="pressed" from="Control/VBoxContainer/Jugar" to="Control" method="_on_Jugar_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Salir" to="Control" method="_on_Salir_pressed"]
